--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -3,10 +3,10 @@
 
 .navbar {
   background: linear-gradient(
-        to bottom, 
-        rgba(0, 0, 0, .8) 0%, 
-        rgba(0, 0, 0, 0) 80%
-    );
+    to bottom,
+    rgba(0, 0, 0, 0.8) 0%,
+    rgba(0, 0, 0, 0) 80%
+  );
   display: flex;
   justify-content: center;
   position: fixed;
@@ -107,7 +107,7 @@
   border-radius: 0;
   color: $color-white;
   font-size: 1rem;
-  transition: width .2s ease-in;
+  transition: width 0.2s ease-in;
   width: 100px;
 
   &:focus {
