--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   position: fixed;
   width: 100%;
+  z-index: 1;
 
   @include lg {
     padding: 52px 0 46px;
@@ -25,7 +26,7 @@
   justify-content: space-between;
 
   @include lg {
-    max-width: 1100px;
+    max-width: $screen-lg-min;
   }
 
   & h1 {
