--- a/styles/components/Banner.module.scss
+++ b/styles/components/Banner.module.scss
@@ -10,7 +10,7 @@
   font-size: 15px;
   justify-content: space-between;
   line-height: 18px;
-  margin: 24px 12px;
+  margin: 24px 0;
   padding: 12px;
   position: relative;
 
