--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -7,12 +7,10 @@
   display: flex;
   justify-content: space-between;
   max-width: $screen-lg-min;
-  margin: 0 12px;
   padding: 17px 0 34px;
   z-index: 0;
 
-  @include sm {
-    margin: 0 21px;
+  @include md {
     padding: 36px 0 45px;
   }
 
@@ -21,7 +19,7 @@
     margin: 0;
     padding: 0;
 
-    @include sm {
+    @include md {
       display: flex;
     }
   }
@@ -37,7 +35,7 @@
   li {
     padding: 0.5em 0;
 
-    @include sm {
+    @include md {
       margin-right: 28px;
     }
 
@@ -48,7 +46,7 @@
 }
 
 .social {
-  @include sm {
+  @include md {
     display: flex;
   }
 
@@ -57,7 +55,7 @@
     display: flex;
     justify-content: space-between;
 
-    @include sm {
+    @include md {
       margin: 0;
     }
   }
@@ -67,7 +65,7 @@
     position: relative;
     width: 24px;
 
-    @include sm {
+    @include md {
       margin-left: 14px;
     }
   }
