--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -35,7 +35,7 @@
     line-height: 28.8px;
     margin: 30px 0 7px 12px;
 
-    @include sm {
+    @include md {
       margin: 35px 0 6px 21px;
     }
 
@@ -57,7 +57,7 @@
   position: relative;
   width: 25px;
 
-  @include sm {
+  @include md {
     margin: 28px;
   }
 
