Hero component created
Changes:
- Hero component added
- Hero tests created
- Colors sorted
- Minor fixes

--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -1,5 +1,9 @@
-$color-white: #ffffff;
 $color-black: #000000;
+$color-black-transparent: rgba(0, 0, 0, 0.4);
 $color-dark-grey: #464646;
-$color-light-grey: #ebebeb;
+$color-green: #3cbbb4;
 $color-grey: #333333;
+$color-light-grey: #ebebeb;
+$color-white: #ffffff;
+$color-white-transparent: rgba(255, 255, 255, 0.4);
+$color-yellow: #f9ad1d;
