--- a/styles/common/colors.scss
+++ b/styles/common/colors.scss
@@ -2,8 +2,10 @@ $color-black: #000000;
 $color-black-transparent: rgba(0, 0, 0, 0.4);
 $color-dark-grey: #464646;
 $color-green: #3cbbb4;
+$color-green-transparent: rgba(60, 187, 180, 0.6);
 $color-grey: #333333;
 $color-light-grey: #ebebeb;
 $color-white: #ffffff;
 $color-white-transparent: rgba(255, 255, 255, 0.4);
 $color-yellow: #f9ad1d;
+$color-yellow-transparent: rgba(249, 173, 29, 0.6);
