--- a/styles/components/BottomBanner.module.scss
+++ b/styles/components/BottomBanner.module.scss
@@ -2,6 +2,16 @@
 @import '../common/breakpoints.scss';
 
 .banner {
+  background-image: linear-gradient(
+      0deg,
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.8)
+    ),
+    url('/images/bg-people.@2x.png');
+  background-position-x: center;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: $color-dark-grey;
   display: flex;
   flex-direction: column;
@@ -62,18 +72,4 @@
       line-height: 32px;
     }
   }
-}
-
-.background {
-  bottom: 0;
-  left: 0;
-  opacity: 0.2;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: -1;
-}
-
-.image {
-  object-fit: cover;
 }
