--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -2,6 +2,11 @@
 @import '../common//breakpoints.scss';
 
 .hero {
+  background-image: url('/images/pope-francis.@2x.png');
+  background-position-x: center;
+  background-position-y: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   padding-top: 68px;
@@ -13,15 +18,6 @@
 
   @include lg {
     padding-top: 140px;
-  }
-
-  .background {
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    z-index: -1;
   }
 
   .image {
